# agent-mini

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
archive-do-not-read/: improvment.md
docs/: 01-openclaw-inspired-improvements.md  02-small-llm-optimization-guide.md
src/agent_mini/: __init__.py  __main__.py  bus.py  cli.py  config.py  sessions.py
src/agent_mini/agent/: __init__.py  context.py  loop.py  memory.py  token_estimator.py  tools.py  vision.py
src/agent_mini/channels/: __init__.py  base.py  telegram.py  whatsapp.py
src/agent_mini/providers/: __init__.py  base.py  claude.py  gemini.py  github_copilot.py  local.py  ollama.py  openai.py
tests/: test_config.py  test_context.py  test_json_repair.py  test_loop.py  test_memory.py  test_phases.py  test_token_estimator.py  test_tools.py
whatsapp-bridge/: .npmrc  index.js  package-lock.json  package.json
