[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mini"
version = "0.1.0"
description = "Ultra-lightweight personal AI agent with Telegram & WhatsApp support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
whatsapp = ["aiohttp>=3.9"]
all = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9",
]

[project.scripts]
agent-mini = "agent_mini.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mini"]
