[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mini"
version = "0.2.0"
description = "Ultra-lightweight personal AI agent — shell, files, web, memory — powered by local or cloud LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mohsin Kaleem", email = "mohsin.kaleem512@gmail.com" },
]
keywords = ["ai", "agent", "llm", "ollama", "local", "cli", "telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
all = [
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/mohsinkaleem/agent-mini"
Repository = "https://github.com/mohsinkaleem/agent-mini"
Issues = "https://github.com/mohsinkaleem/agent-mini/issues"

[project.scripts]
agent-mini = "agent_mini.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_mini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
